--- a/css/conversor-container.css
+++ b/css/conversor-container.css
@@ -52,7 +52,7 @@
 }
 
 .conversor-buttons{
-    max-width: 900px;
+    max-width: 950px;
     margin: 0 auto;
 
 }
@@ -79,7 +79,7 @@
     background-color: var(--primary-color);
     color: var(--theme-color);
     border: none;
-    font-size: 20px;
+    font-size: 26px;
     
     padding: 0.5em 1em;
     border-radius: 7px;
@@ -89,17 +89,7 @@
 
 }
 
-.conversor-button{
-    background-color: var(--primary-color);
-    color: var(--theme-color);
-    border: none;
-    font-size: 20px;
-    
-    padding: 0.5em 1em;
-    border-radius: 7px;
-    cursor: pointer;
 
-}
 
 .op1,.op2{
     background-color: var(--secondary-color);
@@ -118,4 +108,95 @@
     justify-content: space-around;
 
     margin: 40px 0;
+}
+
+
+@media(max-width:950px){
+    .title{
+        font-size: 40px;
+        margin-bottom: 15px;
+        color: var(--primary-color);
+    }
+    
+    .conversor-title{
+        text-align: center;
+        margin-bottom:40px;
+    }
+    
+    .conversor-title p{
+        font-size: 20px;
+    }
+    
+    
+    
+    
+    .conversor{
+        background-color: var(--conversor-background);
+    
+        padding: 60px;
+        border-radius: 20px;
+    
+        margin: 60px 0;
+    }
+    
+
+    
+    .conversor-buttons p{
+        text-align: center;
+        font-size: 20px;
+        
+    }
+    
+    
+    
+    .conversor-buttons-options{
+        display: flex;
+
+        flex-direction: column;
+        align-items: center;
+
+        width: 100%;
+        justify-content: space-between;
+        
+        margin: 20px 0px;
+    
+        
+    }
+    
+    .conversor-button{
+        background-color: var(--primary-color);
+        color: var(--theme-color);
+        border: none;
+        font-size: 20px;
+        
+        padding: 0.5em 1em;
+        border-radius: 7px;
+        cursor: pointer;
+    
+        margin-top: 15px;
+    
+    }
+    
+
+    
+    .op1,.op2{
+        background-color: var(--secondary-color);
+    }
+    
+    .conversor-button:hover{
+        filter: brightness(130%);
+    }
+    
+    
+    
+    
+    .conversor-options{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
+        justify-content: space-around;
+    
+        margin: 40px 0;
+    }
 }
