--- a/css/conversor-container.css
+++ b/css/conversor-container.css
@@ -8,9 +8,7 @@
     display: none;
 }
 
-.conversor-op2{
-    display: none;
-}
+
 
 
 
@@ -24,13 +22,23 @@
     color: var(--primary-color);
 }
 
-.conversor-title{
+.conversor-container-title{
     text-align: center;
+
     font-size: 30px;
     font-weight: 500;
 
-    margin-bottom:40px;
+    /* margin-bottom:40px; */
+
+    /* color: var(--secondary-color); */
+
+    /* display: inline-block; */
+    margin: 0 auto;
 }
+
+
+
+
 
 
 
@@ -46,15 +54,45 @@
     margin: 60px 0;
 }
 
+.conversor-title{
+    text-align: center;
+
+    font-size: 30px;
+    font-weight: 500;
+
+    /* margin-bottom:40px; */
+
+    /* color: var(--secondary-color); */
+
+    /* display: inline-block; */
+    margin: 0 auto;
+
+    border-bottom:4px solid var(--secondary-color);
+    width: fit-content;
+    /* width: calc(fit-content+3px); */
+
+}
+
+/* .conversor-title-line{
+    display: inline;
+    margin: 0 auto;
+    width: 10em;
+    height: 4px;
+
+    background-color: var(--secondary-color);
+    border-radius: 20px;
+} */
+
 .conversor-buttons{
     max-width: 950px;
     margin: 0 auto;
+    margin-top: 30px;
 
 }
 
 .conversor-buttons p{
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     
 }
 
@@ -115,30 +153,61 @@
     /* align-items: space-around; */
     /* align-items: center; */
     /* justify-content: center; */
+
+    color:var(--color-text-inverse);
+    background-color: #fff;
+    border-radius: 20px;
+    width: fit-content;
+    padding: 30px;
 }
 
 .conversor-item{
     /* margin: 0 auto; */
     text-align: center;
     font-size: 25px;
-    /* display: flex; */
+    display: flex;
 }
 
 .conversor-ans{
     display: inline;
+    margin: 0 10px;
+    font-size: 27px;
 }
 
 .input-conversor{
     border: none;
     
-
+    width: 100%;
+    max-width: 250px;
     background: none;
-    color: var(--color-text);
-    border-bottom: 2px var(--color-text) solid;
+    color: var(--color-text-inverse);
+    border-bottom: 2px var(--color-text-inverse) solid;
     font-size: 20px;
+    margin: 0 10px;
+}
+
+.conversor-item p,.conversor-item label{
+    display: inline;
+}
+
+.conversor-item p, .conversor-item label{
+    font-weight: 400;
 }
 
 
+
+
+.conversor-op2{
+    display: none;
+}
+
+.conversor-on{
+    display: block;
+}
+
+.conversor-off{
+    display: none;
+}
 @media(max-width:950px){
     .title{
         font-size: 40px;
@@ -236,15 +305,28 @@
 
     .conversor-item{
 /* background-color: rebeccapurple; */
+        font-size: 22px;
     }
 
+
+
+    .input-conversor{
+
+        font-size: 20px;
+
+    }
+
+    .conversor-ans{
+
+        font-size: 24px;
+    }
+
+    .conversor-on{
+        display: block;
+    }
     
+    .conversor-off{
+        display: none;
+    }
 }
 
-.conversor-on{
-    display: block;
-}
-
-.conversor-off{
-    display: none;
-}
