--- a/css/conversor-container.css
+++ b/css/conversor-container.css
@@ -51,7 +51,7 @@
     padding: 60px;
     border-radius: 20px;
 
-    margin: 60px 0;
+    /* margin: 60px 0; */
 }
 
 .conversor-title{
@@ -166,6 +166,7 @@
     text-align: center;
     font-size: 25px;
     display: flex;
+    flex-direction: column;
 }
 
 .conversor-ans{
@@ -194,6 +195,30 @@
     font-weight: 400;
 }
 
+
+
+.conversor-tutorial{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.conversor-tutorial-title{
+    align-self: center;
+
+    font-size: 30px;
+    font-weight: 500;
+
+    border-bottom:4px solid var(--secondary-color);
+    width: fit-content;
+}
+
+.conversor-tutorial-text{
+    /* background-color: red; */
+    font-size: 18px;
+    padding: 20px;
+}
 
 
 
@@ -320,6 +345,23 @@
 
         font-size: 24px;
     }
+
+
+
+    
+    .conversor-tutorial-title{
+
+        font-size: 25px;
+
+    }
+    
+    .conversor-tutorial-text{
+        /* background-color: red; */
+        font-size: 18px;
+
+    }
+
+
 
     .conversor-on{
         display: block;
