--- a/css/integrantes.css
+++ b/css/integrantes.css
@@ -3,14 +3,55 @@
     flex-direction: column;
 
     align-items: center;
+
+    /* font-size: 30px; */
+    margin: 40px;
 }
 
 .integrantes-title{
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 500;
+
+    border-bottom:4px solid var(--primary-color);
+    width: fit-content;
 }
 
+.integrantes-list{
+    margin: 10px 0;
+}
 
 .integrantes-item{
     list-style: none;
+
+    font-size: 20px;
+    font-weight: 500;
+   
+}
+
+.integrantes-text{
+    font-size: 25px;
+}
+
+
+
+@media(max-width:950px){
+    .integrantes-title{
+        font-size: 30px;
+        font-weight: 500;
+    
+        border-bottom:4px solid var(--primary-color);
+        width: fit-content;
+    }
+
+    .integrantes-item{
+        list-style: none;
+    
+        font-size: 20px;
+        font-weight: 500;
+       
+    }
+    
+    .integrantes-text{
+        font-size: 22px;
+    }
 }
