--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 
 :root{
     --theme-color:#181818;
-    --theme-color-inverse:#d1d1d1;
+    --theme-color-inverse:#fff;
 
     --primary-color:#47DDFF;
     --secondary-color:#f7c331;
