--- a/css/conversor-container.css
+++ b/css/conversor-container.css
@@ -155,7 +155,7 @@
     /* justify-content: center; */
 
     color:var(--color-text-inverse);
-    background-color: #fff;
+    background-color: var(--theme-color-inverse);
     border-radius: 20px;
     width: fit-content;
     padding: 30px;
@@ -184,15 +184,19 @@
     color: var(--color-text-inverse);
     border-bottom: 2px var(--color-text-inverse) solid;
     font-size: 20px;
+    font-weight: 500;
     margin: 0 10px;
 }
 
 .conversor-item p,.conversor-item label{
     display: inline;
+    font-weight: 400;
 }
 
-.conversor-item p, .conversor-item label{
-    font-weight: 400;
+.conversor-item p{
+    color:var(--secondary-color);
+    font-weight: 500;
+    
 }
 
 
