--- a/css/conversor-container.css
+++ b/css/conversor-container.css
@@ -103,7 +103,7 @@
     width: 100%;
     justify-content: space-between;
     
-    margin: 20px 0px;
+    margin-bottom: 40px;
 
     
 }
@@ -283,7 +283,7 @@
         padding: 60px;
         border-radius: 20px;
     
-        margin: 60px 0;
+        /* margin: 60px 0; */
     }
     
 
@@ -305,7 +305,7 @@
         width: 100%;
         justify-content: space-between;
         
-        margin: 20px 0px;
+        /* margin-bottom: 20px 0px; */
     
         
     }
