--- a/css/conversor-container.css
+++ b/css/conversor-container.css
@@ -161,12 +161,18 @@
     padding: 30px;
 }
 
-.conversor-item{
+.conversor-item, .input-conversor-sum::placeholder {
     /* margin: 0 auto; */
     text-align: center;
     font-size: 25px;
     display: flex;
     flex-direction: column;
+    /* color:red; */
+}
+
+.input-conversor-sum::placeholder{
+    color:var(--color-text-placeholder);
+    text-align: start;
 }
 
 .conversor-ans, .conversor-ans-sum{
@@ -185,7 +191,9 @@
     border-bottom: 2px var(--color-text-inverse) solid;
     font-size: 20px;
     font-weight: 500;
-    margin: 0 10px;
+    margin: 5px 10px;
+
+
 }
 
 .conversor-item p,.conversor-item label{
@@ -198,6 +206,15 @@
     font-weight: 500;
     
 }
+
+.conversor-item-signo-mas{
+    color:var(--theme-color-inverse);
+}
+
+.conversor-item-signo-mas-df{
+    display: flex;
+}
+
 
 
 
