--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
     --secondary-color:#f7c331;
     --color-text:#fff;
     --color-text-inverse:#000;
+    --color-text-placeholder:#aaa;
 
     --conversor-background:#2d2d2d;
 }
@@ -33,9 +34,10 @@ html{
     scroll-behavior: smooth;
 }
 
-section[id]{
+section[id], div[id]{
     /* cuando le des en la barra y te mande a esa parte de la pagina, la barra fixed tapa parte del contenido, esto lo arregla */
-    scroll-margin-top: 70px;
+    scroll-margin-top: 75px;
+    /* 5px mas para mas espacio, 70 son de la barra nav */
 }
 
 
