--- a/css/conversor-container.css
+++ b/css/conversor-container.css
@@ -46,8 +46,7 @@
 
 
 .conversor{
-    /* background-color: var(--conversor-background); */
-    background-image: url("../img/WhatsApp\ Image\ 2022-11-28\ at\ 4.37.12\ PM.jpeg");
+    background-color: var(--conversor-background);
 
     padding: 60px;
     border-radius: 20px;
@@ -242,7 +241,9 @@
     padding: 20px;
 }
 
-
+.conversor-tutorial-text img{
+    border-radius: 20px;
+}
 
 
 
