--- a/css/integrantes.css
+++ b/css/integrantes.css
@@ -24,8 +24,11 @@
     list-style: none;
 
     font-size: 20px;
-    font-weight: 500;
-   
+    font-weight: 400;
+    text-transform: uppercase;
+
+    margin: 6px 0;
+
 }
 
 .integrantes-text{
