--- a/css/integrantes.css
+++ b/css/integrantes.css
@@ -21,7 +21,7 @@
 }
 
 .integrantes-item{
-    list-style: none;
+    /* list-style: none; */
 
     font-size: 20px;
     font-weight: 400;
@@ -33,6 +33,8 @@
 
 .integrantes-text{
     font-size: 25px;
+    font-weight: 500;
+    margin-top: 20px;
 }
 
 
