--- a/css/integrantes.css
+++ b/css/integrantes.css
@@ -49,7 +49,7 @@
     }
 
     .integrantes-item{
-        list-style: none;
+        /* list-style: none; */
     
         font-size: 18px;
         font-weight: 500;
