--- a/css/nav.css
+++ b/css/nav.css
@@ -6,7 +6,8 @@
 
     background-color: var(--theme-color);
 
-    box-shadow: 0 4px 5px #e5e5e5;
+    /* box-shadow: 0 4px 5px #e5e5e5; */
+    border-bottom: 2px solid var(--color-text);
 
     width: 100%;
     /* es para que la imagen no este arriba del nav */
